# rust-diagnostics

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  config.combined.toml  config.conventions.toml  config.machineapplicable.toml  config.unwrap_used.toml  test.sh  versions.sh
.claude-plugin/: plugin.json
.claude-plugin/commands/: warn-identify.md  warn-reduce.md  zerowarns.md
abc/src/: main.rs
crates/: counts.gnuplot  run.sh
crates/count/: Cargo.toml
crates/count/src/: lib.rs  main.rs  test.rs
crates/db/: .gitignore  Cargo.toml  redis.sh  test.sh  tikv.sh
crates/db/src/: lib.rs
crates/gitlog/: Cargo.toml
crates/gitlog/src/: lib.rs  test.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs  main.rs  test.rs
crates/warning/: Cargo.toml
crates/warning/src/: lib.rs  test.rs
refactoring/: rust.grm  unwrap_used.txl
src/: language.rs  main.rs
warn-rewrite/: Cargo.toml  README.md  rust-toolchain.toml
warn-rewrite/src/: apply.rs  callbacks.rs  classify.rs  fixup.rs  main.rs  strip_allows.rs  visitor.rs
