[package]
name = "rust-diagnostics"
version = "0.1.10"
edition = "2021"
authors = [
    "Yijun Yu <y.yu@open.ac.uk>",
]
description = "A utility that embeds clippy diagnostics into Rust code."
repository = "https://github.com/trusted-programming/rust-diagnostics"
documentation = "https://docs.rs/rust_diagnostics"
keywords = ["clippy", "diagnostics"]
license = "Apache-2.0"

[dependencies]
cargo = "0.66.0"
cargo_metadata = "0.15.1"
structopt = "0.3.26"
serde = { version = "1.0.133", features = [ "derive" ] }
git2 = "0.15.0"
tree-sitter-parsers = "0.0.5"
tree-sitter = "0.20.9"
anyhow = "1.0.52"
once_cell = "1.17.0"
uuid = { version = "1.2.2", features = ["v4"] }
serde_json = "1.0.91"

[build-dependencies]
cc = { version = "1.0.72", features = [ "parallel" ] }

[dev-dependencies]
serial_test = "0.10.0"
insta = "1.26.0"
