[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
gitlog = { path = "../gitlog" }
warning = { path = "../warning" }
function = { path = "../function" }
serde = { version = "1.0.133", features = [ "derive" ] }
serde_json = "1.0.89"
structopt = "0.3.26"
grpcio-sys = "0.12.1"
